[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Objects/CheckpointUnlit.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/DetectionLight.png" type="Texture" id=2]
[ext_resource path="res://Assets/Objects/CheckpointLit.png" type="Texture" id=4]
[ext_resource path="res://Objects/Checkpoint.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 16 )

[node name="Checkpoint" type="Node2D"]
script = ExtResource( 5 )

[node name="CheckpointUnlit" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CheckpointLit" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -32 )
rotation = 1.5708
scale = Vector2( 0.2, 1 )
enabled = false
texture = ExtResource( 2 )
offset = Vector2( 1500, 0 )
color = Color( 1, 0.984314, 0.592157, 1 )
energy = 0.5
range_layer_min = -512
shadow_enabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 16 )
shape = SubResource( 2 )

[node name="SavePosition" type="Position2D" parent="."]
position = Vector2( 0, -16 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
